<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UC5"
    android:layout_alignParentBottom="true"
    >



    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz1"
        android:layout_column="0"
        android:layout_row="0"

        />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz2"
        android:layout_column="1"
        android:layout_row="0"
        />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz3"
        android:layout_column="2"
        android:layout_row="0"
       />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz4"
        android:layout_column="0"
        android:layout_row="1" />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz5"
        android:layout_column="1"
        android:layout_row="1"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz6"
        android:layout_column="2"
        android:layout_row="1"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz7"
        android:layout_column="0"
        android:layout_row="2"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz8"
        android:layout_column="1"
        android:layout_row="2"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz9"
        android:layout_column="2"
        android:layout_row="2"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz0"
        android:layout_column="0"
        android:layout_row="3"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz11"
        android:layout_column="1"
        android:layout_row="3"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz12"
        android:layout_column="2"
        android:layout_row="3"/>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz13"
        android:layout_column="0"
        android:layout_row="4"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz14"
        android:layout_column="1"
        android:layout_row="4"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/sz15"
        android:layout_column="2"
        android:layout_row="4"/>

    <Button
        android:id="@+id/rt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/rt2"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal" />

</GridLayout>