<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UC1"
    android:orientation="vertical"
    android:gravity="center_vertical|center">

    <ToggleButton
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/uc01"
        android:textOn="@string/uc02"
        android:checked="true"
        />

    <Switch
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/uc01"
        android:textOn="@string/uc02"
        android:checked="true"
        />
    <LinearLayout
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/us1"
        />
    <Button
        android:id="@+id/user2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/us2"
        />

    <Button
        android:id="@+id/user3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/us3" />
     </LinearLayout>

    <Button
        android:id="@+id/rt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rt2"
        />
</LinearLayout>


