<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UC4">

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us1"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us2"/>

    </TableRow>


        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us3"/>


    <TableRow>
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us4"/>
    </TableRow>


    <TextView/><TextView/><TextView/><TextView/><TextView/><TextView/>
    <TextView/><TextView/><TextView/><TextView/><TextView/><TextView/>

    <Button
        android:id="@+id/rt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rt2"
        android:layout_gravity="bottom"

        />



</TableLayout>