<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UC1_final"
    android:orientation="vertical"
    android:gravity="center_vertical|center">


    <Button
        android:id="@+id/shuiping1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uc01"/>
    <Button
        android:id="@+id/chuizhi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uc02"/>
    <Button
        android:id="@+id/kaozuo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uc03"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rt2"/>


</LinearLayout>